--- a/test40.html
+++ b/test40.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head> 
 <meta charset="utf-8"> 
@@ -6,11 +6,7 @@
 </head>
 <body>
 
-<form action="https://www.runoob.com/try/demo_source/demo-form.php">
-  First name: <input type="text" name="fname"><br>
-  Last name: <input type="text" name="lname"><br>
-  <input type="image" src="img_submit.gif"  alt="Submit" width="48" height="48">
-</form>
+<p>hello world!</p>
 
 </body>
 </html>
